import React from 'react';
import { mount } from 'enzyme';
import { MemoryRouter, Route } from 'react-router-dom';
import { SearchScreen } from '../../../components/search/SearchScreen';
import '@testing-library/jest-dom';


describe('Pruesbas en <searchScreen />', () => {
    

    test('debe de mostrarse correctamente con valores por defecto', () => {

        const wrapper = mount(
            <MemoryRouter initialEntries={['/search']}>
                <Route
                    path="/search" component={ SearchScreen }
                >
                </Route>
            </MemoryRouter>
        );

        expect ( wrapper ).toMatchSnapshot();

        expect( wrapper.find('.alert-info').text().trim() ).toBe('Search a hero');
        
    });
    
    test('debe de mostrar a Batman y el input con el valor del queryString', () => {
       
        /** probamos que tengamos el location, que tengamos el qrey , que useform trabaje */
        const wrapper = mount(
            <MemoryRouter initialEntries={['/search?q=batman']}>
                <Route
                    path="/search" component={SearchScreen}
                >
                </Route>
            </MemoryRouter>
        );

        expect ( wrapper.find('input').prop('value') ).toBe('batman');
        expect ( wrapper ).toMatchSnapshot();



    });

    test('debe de mostrar el error si no se encuentra el hero', () => {
       
        
        const wrapper = mount(
            <MemoryRouter initialEntries={['/search?q=batman123']}>
                <Route
                    path="/search" component={SearchScreen}
                >
                </Route>
            </MemoryRouter>
        );

        expect(wrapper.find('.alert-danger').text().trim() ).toBe(`There is no a hero with batman123`);
        expect(wrapper).toMatchSnapshot();

    });
    

    /***
     * Hay que probar que tengamos algun valor,  hacer una modificación en la caja de texto ,  que la caja de texto modifique el url  etc
     */
    test('debe de llamar el push  del history', () => {
       
        const history = {
            push: jest.fn(),
        };

        const wrapper = mount(
            <MemoryRouter initialEntries={['/search?q=batman123']}>
                <Route
                    path="/search"
                    component={ () => <SearchScreen history={ history } />}
                >
                </Route>
            </MemoryRouter>
        );

        wrapper.find('input').simulate('change', {
            target:{
                name:'searchText',
                value:'batman'
            }
        });

        wrapper.find('form').prop('onSubmit')({
            preventDefault(){}
        });


        expect(history.push).toHaveBeenCalledWith(`?q=batman`);


    });
    



})




/**
 * La primera prueba sera mostrar los valores por defecto 
 * simularemos que la ruta del query coincida con la caja de texto
 */